gatekeeper-policy/invalid-deploy.yaml
# Create a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: testing
  labels:
    name: testing
---
# Create a Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  namespace: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: php-apache
        image: registry.k8s.io/hpa-example
        ports:
        - containerPort: 80
